--- a/rest-countries-api-with-color-theme-switcher-master/src/styles.css
+++ b/rest-countries-api-with-color-theme-switcher-master/src/styles.css
@@ -26,6 +26,13 @@ input:user-invalid{
     outline: var(--invalid-response);
 }
 
+#search-error{
+    padding-left: 0.5vw;
+    margin-top: 1vw;
+    font-style: italic;
+    color: var(--invalid-response);
+}
+
 /*FONT=============================*/
 body{
     font-family: "Nunito Sans",Verdana, Geneva, Tahoma, sans-serif;
@@ -110,6 +117,11 @@ ul{
 
 /*MOBILE*/
 @media (max-width: 450px){
+    #search-error{
+        margin-top: -7vw;
+        margin-bottom: 5vw;
+    }
+    
     h1{
         font-size: 1rem;
     }
