--- a/where-in-the-world-main/styles.css
+++ b/where-in-the-world-main/styles.css
@@ -119,11 +119,18 @@ ul{
 }
 .card{
     width: 16vw;
+    height: fit-content;
     margin-right: 4vw;
     padding: 0;
     border: none;
     filter: var(--drop-shadow);
 }
+.card:hover{
+    outline: 2px solid var(--invalid-notification);
+    filter: var(--drop-shadow-focus);
+    cursor: pointer;
+}
+
 .card-img-top{
     height: 9.5vw; 
     background-color: rgb(211, 211, 211);
