--- a/where-in-the-world-main/styles.css
+++ b/where-in-the-world-main/styles.css
@@ -1,328 +1,345 @@
-:root{
-    /*Base Styling*/
-    --input-border-rounded: 0.25vw;
-    --input-border-rounded-mobile: 1vw;
-    --light-mode-background: hsl(0, 0%, 99%);
-    --light-mode-input:hsl(0, 0%, 50%);
-    --light-mode-text: hsl(200, 15%, 8%);
-    --dark-mode-background: hsl(207, 26%, 17%);
-    --dark-mode-elements: hsl(209, 23%, 22%);
-    --its-white: hsl(0, 100%, 100%);
-    --drop-shadow: drop-shadow(0 0 0.55rem rgba(88, 88, 88, 0.137));
-    /*Accessibility & Interactivity*/
-    --input-focus: hsl(198, 100%, 92%);
-    --button-hover: hsl(198, 78%, 25%);
-    --invalid-notification: hsl(204, 100%, 26%);
-    --invalid-response: hsl(49, 100%, 60%);
-    --valid-response: hsl(145, 81%, 39%);
-    --drop-shadow-focus: drop-shadow(0 0 0.35rem rgba(0, 225, 255, 0.205));
+:root {
+  /*Base Styling*/
+  --input-border-rounded: 0.25vw;
+  --input-border-rounded-mobile: 1vw;
+  --light-mode-background: hsl(0, 0%, 99%);
+  --light-mode-input: hsl(0, 0%, 50%);
+  --light-mode-text: hsl(200, 15%, 8%);
+  --dark-mode-background: hsl(207, 26%, 17%);
+  --dark-mode-elements: hsl(209, 23%, 22%);
+  --drop-shadow: drop-shadow(0 0 0.55rem rgba(88, 88, 88, 0.137));
+  /*Accessibility & Interactivity*/
+  --input-focus: hsl(198, 100%, 92%);
+  --button-hover: hsl(198, 78%, 25%);
+  --invalid-notification: hsl(204, 100%, 26%);
+  --invalid-response: hsl(49, 100%, 60%);
+  --valid-response: hsl(145, 81%, 39%);
+  --drop-shadow-focus: drop-shadow(0 0 0.35rem rgba(0, 225, 255, 0.205));
 }
 /*ACCESSIBILITY & INTERACTIVITY=============================*/
-input:focus, select:focus, button:focus{
-    background-color: var(--input-focus);
-    outline: 2px solid var(--invalid-notification);
-    filter: var(--drop-shadow-focus);
+input:focus,
+select:focus,
+button:focus {
+  background-color: var(--input-focus);
+  outline: 2px solid var(--invalid-notification);
+  filter: var(--drop-shadow-focus);
 }
-#back-button:hover, #theme-toggler:hover{
-    background-color: var(--button-hover);
-    color: var(--its-white);
-}
-
-input:user-valid{
-    outline: 3px solid var(--valid-response);
-}
-input:user-invalid{
-    outline: 3px solid var(--invalid-response);
+#back-button:hover,
+#back-button.dark:hover,
+#theme-toggler:hover {
+  background-color: var(--button-hover);
+  color: white;
 }
 
-#search-error{
-    padding-left: 0.5vw;
-    margin-top: 1vw;
-    font-style: italic;
-    color: var(--invalid-notification);
+input:user-valid {
+  outline: 3px solid var(--valid-response);
+}
+input:user-invalid {
+  outline: 3px solid var(--invalid-response);
+}
+
+#search-error {
+  padding-left: 0.5vw;
+  margin-top: 1vw;
+  font-style: italic;
+  color: var(--invalid-notification);
+}
+/*DARK MODE | THEME=============================*/
+main.dark,
+body.dark {
+  background-color: var(--dark-mode-background);
+  color: white;
+}
+header.dark,
+.card.dark,
+input.dark,
+select.dark,
+button.dark,
+#back-button.dark {
+  background-color: var(--dark-mode-elements);
+  color: white;
 }
 
 /*FONT=============================*/
-body{
-    font-family: "Nunito Sans",Verdana, Geneva, Tahoma, sans-serif;
+body {
+  font-family: "Nunito Sans", Verdana, Geneva, Tahoma, sans-serif;
+  max-width: 100vw;
 }
-h1{
-    font-size: 1.5rem;
-    font-weight: 800;
+h1 {
+  font-size: 1.5rem;
+  font-weight: 800;
 }
-h2{
-    font-size: 1.25rem;
-    font-weight: bold;
+h2 {
+  font-size: 1.25rem;
+  font-weight: bold;
 }
 /*HEADER=====================================*/
-header{
-    padding: 0 8vw;
-    background-color: var(--its-white);
-    filter: var(--drop-shadow);
+header {
+  padding: 0 8vw;
+  background-color: white;
+  filter: var(--drop-shadow);
 }
 
-#header-content-container{
-    height: 4vw;
-    width: 100%;
+#header-content-container {
+  height: 4vw;
+  width: 100%;
 }
-#theme-toggler{
-    background-color: transparent;
-    border: transparent;
-    padding: 0.5vw 1vw;
-    border-radius: var(--input-border-rounded);
+#theme-toggler {
+  background-color: transparent;
+  border: transparent;
+  padding: 0.5vw 1vw;
+  border-radius: var(--input-border-rounded);
 }
-#toggle-text{
-    font-weight:600;
+#toggle-text {
+  font-weight: 600;
 }
 /*MAIN CONTENT===============================*/
-main{
-    padding: 0 8vw;
-    background-color: var(--light-mode-background);
+main {
+  padding: 0 8vw;
+  background-color: var(--light-mode-background);
 }
 
 /*Interaction Query Container*/
-#interaction-query-container{
-    margin: 0 0.5vw;
-    padding: 2vw 0;
+#interaction-query-container {
+  margin: 0 0.5vw;
+  padding: 2vw 0;
 }
 
-#country-search-bar{
-    width: 35vw;
-    height: 3vw;
-    padding-left: 1vw;
-    border-color: transparent;
-    border-radius: var(--input-border-rounded);
+#country-search-bar {
+  width: 35vw;
+  height: 3vw;
+  padding-left: 1vw;
+  border-color: transparent;
+  border-radius: var(--input-border-rounded);
 }
-#region-select{
-    height: 3vw;
-    width: 10vw;
-    padding-left: 1vw;
-    margin-left: -3vw;
-    border-color: transparent;
-    border-radius: var(--input-border-rounded);
+#region-select {
+  height: 3vw;
+  width: 10vw;
+  padding-left: 1vw;
+  margin-left: -3vw;
+  border-color: transparent;
+  border-radius: var(--input-border-rounded);
 
-    appearance: none;
+  appearance: none;
 }
-option{
-    display: flex;
-    border: transparent;
-}
-
-select option:last-of-type{
-    border-radius: 5vw;
+option {
+  display: flex;
+  border: transparent;
 }
 
+select option:last-of-type {
+  border-radius: 5vw;
+}
 
 /*Cards*/
-ul{
-    gap: 4vw 0;
+ul {
+  gap: 4vw 0;
 }
-.card{
-    width: 16vw;
-    height: fit-content;
-    margin-right: 4vw;
-    padding: 0;
-    border: none;
-    filter: var(--drop-shadow);
+.card {
+  width: 16vw;
+  height: fit-content;
+  margin-right: 4vw;
+  padding: 0;
+  border: none;
+  filter: var(--drop-shadow);
 }
 .card:hover {
-    outline: 2px solid var(--invalid-notification);
-    filter: var(--drop-shadow-focus);
-    cursor: pointer;
+  outline: 2px solid var(--invalid-notification);
+  filter: var(--drop-shadow-focus);
+  cursor: pointer;
 }
 
-.card-img-top{
-    height: 9.5vw; 
-    background-color: rgb(211, 211, 211);
+.card-img-top {
+  height: 9.5vw;
+  background-color: rgb(211, 211, 211);
 }
-.card-body{
-    padding: 1vw;
+.card-body {
+  padding: 1vw;
 }
 /*DETAILS 'PAGE'=============================*/
-#back-button-container{
-    margin-top: 2vw;
-    margin-bottom: 4vw;
+#back-button-container {
+  margin-top: 2vw;
+  margin-bottom: 4vw;
 }
-#back-button{
-    padding: 0.5vw 2.5vw;
-    background-color: var(--its-white);
-    border-color: transparent;
-    border-radius: var(--input-border-rounded);
-    filter: var(--drop-shadow);
+#back-button {
+  padding: 0.5vw 2.5vw;
+  background-color: white;
+  border-color: transparent;
+  border-radius: var(--input-border-rounded);
+  filter: var(--drop-shadow);
 }
 
-#detail-information-container h2{
-    font-weight:normal;
+#detail-information-container h2 {
+  font-weight: normal;
 }
-#flag-img{
-    background-color: rgb(211, 211, 211);
-    height: 22vw;
-    width: 35vw;
+#flag-img {
+  background-color: rgb(211, 211, 211);
+  height: 22vw;
+  width: 35vw;
 }
-#detail-country-name{
-    font-size: 2rem;
-    font-weight: 800;
+#detail-country-name {
+  font-size: 2rem;
+  font-weight: 800;
 }
-#detail-panel-bottom{
-    margin-top: 2vw;
+#detail-panel-bottom {
+  margin-top: 2vw;
 }
-.detail-border-country{
-    border: 2px solid var(--light-mode-background);
-    border-radius: var(--input-border-rounded);
-    background-color: var(--its-white);
-    padding: 0.25vw 2vw;
-    width: fit-content;
-    margin-left: 1vw;
-    filter: var(--drop-shadow);
+.detail-border-country {
+  border: 2px solid var(--light-mode-background);
+  border-radius: var(--input-border-rounded);
+  background-color: white;
+  padding: 0.25vw 2vw;
+  width: fit-content;
+  margin-left: 1vw;
+  margin-bottom: 1vw;
+  filter: var(--drop-shadow);
 }
-.detail-border-country:hover{
-    outline: 2px solid var(--invalid-notification);
-    filter: var(--drop-shadow-focus);
-    cursor: pointer;
+.detail-border-country:hover {
+  outline: 2px solid var(--invalid-notification);
+  filter: var(--drop-shadow-focus);
+  cursor: pointer;
 }
 /*TABLETS / MEDIUM SIZE*/
-@media (1560px >= width >= 560px){
-    /*FONT=============================*/
-    h1{
-        font-size: 1.25rem;
-        font-weight: 800;
-    }
-    h2{
-        font-size: 0.85rem;
-        font-weight: bold;
-    }
-    /*HEADER*/
-    main{
-        padding-left: 13vw;
-    }
+@media (1560px >= width >= 560px) {
+  /*FONT=============================*/
+  h1 {
+    font-size: 1.25rem;
+    font-weight: 800;
+  }
+  h2 {
+    font-size: 0.85rem;
+    font-weight: bold;
+  }
+  /*MAIN*/
+  main {
+    padding-left: 13vw;
+  }
 
-    /*Interaction Bar =================*/
-    #interaction-query-container{
-        margin: 0 0.5vw;
-        padding-top: 2vw;
-    }
-    #country-search-bar{
-        width: 45vw;
-        height: 5vw;
-        font-size: 1rem;
-    }
-    #region-select{
-        height: 5vw;
-        width: 15vw;
-        padding-left: 1vw;
-        margin-left: -11vw;
-        font-size: 0.85rem;
-    }
-    /*Cards ==========================*/
-    .card{
-        width: 20vw;
-        height: auto;
-    }
-    .card-img-top{
-        height: 12vw; 
-    }
+  /*Interaction Bar =================*/
+  #interaction-query-container {
+    margin: 0 0.5vw;
+    padding-top: 2vw;
+  }
+  #country-search-bar {
+    width: 45vw;
+    height: 5vw;
+    font-size: 1rem;
+  }
+  #region-select {
+    height: 5vw;
+    width: 15vw;
+    padding-left: 1vw;
+    margin-left: -11vw;
+    font-size: 0.85rem;
+  }
+  /*Cards ==========================*/
+  .card {
+    width: 20vw;
+    height: auto;
+  }
+  .card-img-top {
+    height: 12vw;
+  }
 
-    .card-body{
-        font-size: 0.7rem;
-    }
-    /*DETAILS 'PAGE'=============================*/
-    #flag-img{
-        height: 25vw;
-        width: 35vw;
-        margin-bottom: 10vw;
-    }
-    #detail-image-container h2{
-        height: fit-content;
-    }
-    .detail-border-country{
-        font-size: 0.7rem;
-        padding: 0.25vw 2vw;
-        margin-left: 3vw;
-        width: fit-content;
-    }
-
+  .card-body {
+    font-size: 0.7rem;
+  }
+  /*DETAILS 'PAGE'=============================*/
+  #flag-img {
+    height: 25vw;
+    width: 35vw;
+    margin-bottom: 10vw;
+  }
+  #detail-image-container h2 {
+    height: fit-content;
+  }
+  .detail-border-country {
+    font-size: 0.7rem;
+    padding: 0.25vw 2vw;
+    margin-left: 3vw;
+    width: fit-content;
+  }
 }
 
-
 /*MOBILE SMALL*/
-@media (max-width: 550px){
-    #search-error{
-        margin-top: -7vw;
-        margin-bottom: 5vw;
-    }
-    
-    h1{
-        font-size: 1rem;
-    }
-    h2{
-        font-size: 1.2rem;
-    }
-    /*HEADER*/
-    #header-content-container{
-        height:20vw;
-        padding-top: 2vw;
-    }
-    #theme-toggler{
-        border-radius: 5vw;
-        padding-top: 3vw;
-        padding-right: 2vw;
-    }
-    /*Interaction Query Container*/
-    #interaction-query-container{
-        padding-top: 3vw;
-    }
-    #country-search-bar{
-        width: 80vw;
-        height: 10vw;
-        margin-bottom: 10vw;
-        margin-top: 3vw;
-        border-radius: var(--input-border-rounded-mobile);
-    }
-    #region-select{
-        height: 13vw;
-        width: 50vw;
-        margin: 0;
-        border-radius: var(--input-border-rounded-mobile);
-    }
+@media (max-width: 550px) {
+  #search-error {
+    margin-top: -7vw;
+    margin-bottom: 5vw;
+  }
 
-    /*CARDS*/
-    .card{
-        width: 61vw;
-        height: auto;
-        margin: auto 0 10.5vw 5vw;
-    }
+  h1 {
+    font-size: 1rem;
+  }
+  h2 {
+    font-size: 1.2rem;
+  }
+  /*HEADER*/
+  #header-content-container {
+    height: 20vw;
+    padding-top: 2vw;
+  }
+  #theme-toggler {
+    border-radius: 5vw;
+    padding-top: 3vw;
+    padding-right: 2vw;
+  }
+  /*Interaction Query Container*/
+  #interaction-query-container {
+    padding-top: 3vw;
+  }
+  #country-search-bar {
+    width: 80vw;
+    height: 10vw;
+    margin-bottom: 10vw;
+    margin-top: 3vw;
+    border-radius: var(--input-border-rounded-mobile);
+  }
+  #region-select {
+    height: 13vw;
+    width: 50vw;
+    margin: 0;
+    border-radius: var(--input-border-rounded-mobile);
+  }
 
-    .card-img-top{
-        height: 36vw; 
-    }
-    .card-body{
-        font-size: 1rem;
-        padding: 5vw;
-    }
+  /*CARDS*/
+  .card {
+    width: 61vw;
+    height: auto;
+    margin: auto 0 10.5vw 5vw;
+  }
 
-    /*DETAILS 'PAGE'=============================*/
-    #back-button-container{
-        margin-top: 11vw;
-        margin-bottom: 15vw;
-    }
-    #flag-img{
-        height: 52vw;
-        width: 75vw;
-        margin-bottom: 10vw;
-    }
-    #detail-country-name{
-        font-size: 1.5rem;
-    }
-    #detail-information-container h2{
-        font-size: 1rem;
-    }
-    #detail-panel-bottom{
-        margin-top: 8vw;
-    }
-    .detail-border-country{
-        font-size: 0.9rem;
-        padding: 0.25vw 2vw;
-        margin-left: 3vw;
-        width: fit-content;
-    }
+  .card-img-top {
+    height: 36vw;
+  }
+  .card-body {
+    font-size: 1rem;
+    padding: 5vw;
+  }
+
+  /*DETAILS 'PAGE'=============================*/
+  #back-button-container {
+    margin-top: 11vw;
+    margin-bottom: 15vw;
+  }
+  #flag-img {
+    height: 52vw;
+    width: 75vw;
+    margin-bottom: 10vw;
+  }
+  #detail-country-name {
+    font-size: 1.5rem;
+  }
+  #detail-information-container h2 {
+    font-size: 1rem;
+  }
+  #detail-panel-bottom {
+    margin-top: 8vw;
+  }
+  .detail-border-country {
+    font-size: 0.9rem;
+    padding: 0.25vw 2vw;
+    margin-left: 3vw;
+    width: fit-content;
+  }
 }
